# LUODA-Codex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md  check.txt  session-2026-06-12-130000.md  session-2026-06-12-134000.md  session-2026-06-12-183103.md  temp_src.tsx  verify.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: pr-build.yml  release-assets.yml
apps/codex-plus-launcher/: Cargo.toml
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/: index.html  package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx
apps/codex-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/luoda-codex-launcher/: Cargo.toml  build.rs
apps/luoda-codex-launcher/src/: main.rs
apps/luoda-codex-manager/: index.html  package-lock.json  package.json
apps/luoda-codex-manager/src/: App.tsx  App.tsx.backup  presets.ts  styles.css
apps/luoda-codex-manager/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  windows-app-manifest.xml
apps/luoda-codex-manager/src-tauri/capabilities/: default.json
apps/luoda-codex-manager/src-tauri/src/: commands.rs  install.rs  lib.rs  main.rs
apps/luoda-codex-manager/src-tauri/tests/: windows_subsystem.rs
assets/inject/: renderer-inject.js
crates/codex-plus-core/src/: http_client.rs  launcher.rs  paths.rs  settings.rs  version.rs  watcher.rs  zed_remote.rs
crates/luoda-codex-core/: Cargo.toml
crates/luoda-codex-data/: Cargo.toml
docs/: upstream-merge-guide.md
docs/release/: 20260602191421483_token统计历史恢复bridge发布说明.md
scripts/: merge-upstream.py
(+97 files in other folders)
