[package]
name = "luoda-codex-launcher"
version.workspace = true
edition = "2021"
license.workspace = true
repository.workspace = true

[[bin]]
name = "luoda-codex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
luoda-codex-core = { path = "../../crates/luoda-codex-core" }
luoda-codex-data = { path = "../../crates/luoda-codex-data" }
directories.workspace = true
serde_json.workspace = true
tokio.workspace = true

[build-dependencies]
winresource.workspace = true
