[package]
name = "luoda-codex-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "luoda_codex_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "luoda-codex-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
luoda-codex-core = { path = "../../../crates/luoda-codex-core" }
luoda-codex-data = { path = "../../../crates/luoda-codex-data" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["custom-protocol", "tray-icon"] }
tauri-plugin-dialog = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile.workspace = true
